--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 addons:
   sonarcloud:
-    organization: "sanogotech"
+    organization: "haamine"
     token:
-      secure: "40a7da271b785f757f93fd9f2dffc6428297882a" # encrypted value of your token
+      secure: "46b3377f55f44e7060dc5134a36ad2bbe341dac6" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=sanogotech_archijavajeespringboot
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=haamine_formation_sonar
