--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.projectKey=macrosoft:archijee
 # Le nom et la version affichés dans l'interface SonarQube
 sonar.projectName=ArchiSample
 sonar.projectVersion=1.0
+sonar.login=1ae84f13ca0cc171f2d62c159d948f15fe2b01a7
 
 # --- optional properties ---
 
@@ -17,17 +18,16 @@ sonar.projectVersion=1.0
 #sonar.language=java
 #sonar.sources=.
 sonar.sources=src
-#sonar.exclusions=folder/**
+sonar.exclusions=src/main/resources/static/**
 #Only for JAVA Code
 #https://docs.sonarqube.org/latest/analysis/languages/java/
 sonar.java.binaries=target/classes,target/test-classes
 
 
 # Tests
-#sonar.tests=src/test
-#sonar.junit.reportsPath=target/surefire-reports
-#sonar.surefire.reportsPath=target/surefire-reports
-#sonar.jacoco.reportPath=target/jacoco.exec
+sonar.junit.reportsPath=target/surefire-reports
+sonar.surefire.reportsPath=target/surefire-reports
+sonar.jacoco.reportPath=target/jacoco.exec
 #sonar.java.coveragePlugin=jacoco
 
 # Debug
